补充GC原理和测试分析